kubernetes_review.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataservice
spec:
  selector:
    matchLabels:
      app: dataservice
  template:
    metadata:
      labels:
        app: dataservice
    spec:
      containers:
        - name: server
          image: docker.io/keerthi19/rating:latest
          ports:
          - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: dataservice
spec:
  type: ClusterIP
  selector:
    app: dataservice
  ports:
  - name: http
    port: 8082
    targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
spec:
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: server
          image: docker.io/keerthi19/review:latest
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: review-external
spec:
  type: LoadBalancer
  selector:
    app: review
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
